--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 	    <div class="clear"></div>	    
 	    <div class="formrow">	
 	      <div class="formlabel">serverip</div>  
-	      <div class="formvalue"><input type="text" id="serverip"  class="text" value="localhost" /></div> 	
+	      <div class="formvalue"><input type="text" id="serverip"  class="text" value="77.23.57.122" /></div> 	
 	    </div>
 	    <div class="clear"></div>	    
 	    <div class="formrow">	
@@ -656,7 +656,7 @@
         <div class="clear"></div>       
         <div class="formrow">   
           <div class="formlabel">serverip</div>  
-          <div class="formvalue"><input type="text" id="loadserverip"  class="text" value="localhost" /></div>  
+          <div class="formvalue"><input type="text" id="loadserverip"  class="text" value="77.23.57.122" /></div>  
         </div>
         <div class="clear"></div>       
         <div class="formrow">   
